--- a/.github/workflows/firefox.yml
+++ b/.github/workflows/firefox.yml
@@ -20,9 +20,9 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           apt-get update
-          # 安装基础工具 + Python + Pip
-          # 去掉了 xterm，因为不再需要终端模拟器
-          apt-get install -y software-properties-common wget curl git net-tools sudo debconf-utils vim unzip python3-pip
+          # 安装系统工具 + Python + Pip
+          # 虽然不用xterm跑脚本了，但保留xterm方便你进VNC调试时手动开终端
+          apt-get install -y software-properties-common wget curl git net-tools sudo debconf-utils vim unzip python3-pip xterm
           
           # 安装 noVNC 和 VNC Server
           git clone https://github.com/novnc/noVNC.git /opt/noVNC
@@ -47,8 +47,7 @@ jobs:
           # 建立下载文件夹
           su appuser -c "mkdir -p /home/appuser/Downloads"
           
-          # 【核心修复】以 appuser 身份安装 Firefox
-          # 确保脚本运行时能在 /home/appuser/.cache/ms-playwright 下找到浏览器
+          # 【核心】以 appuser 身份安装 firefox
           echo ">>> Installing Firefox for AppUser..."
           su appuser -c "playwright install firefox"
           
@@ -62,7 +61,7 @@ jobs:
             exit 1
           fi
 
-      # 3. 启动桌面环境 (后台运行)
+      # 3. 启动桌面环境
       - name: Start Desktop Environment
         run: |
           service dbus start || true
@@ -79,19 +78,18 @@ jobs:
           # 启动窗口管理器
           fluxbox &
           
-          # 启动 VNC Server (密码: secret)
+          # 启动 VNC Server (密码 secret)
           x11vnc -display :99 -forever -passwd secret -bg -noxdamage
           
-          # 启动 noVNC 代理
+          # 启动 noVNC 网页代理
           /opt/noVNC/utils/novnc_proxy --vnc localhost:5900 --listen 6080 &
           EOF
           
           chmod +x /home/appuser/run_desktop.sh
-          # 后台运行桌面环境
           su appuser -c "/home/appuser/run_desktop.sh"
           echo "✅ Desktop Started (Xvfb + Fluxbox + VNC)"
 
-      # 4. 启动 Network Tunnel (使用你指定的逻辑)
+      # 4. 启动 Network Tunnel (原始简单逻辑)
       - name: Start Network Tunnel
         run: |
           curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
@@ -100,51 +98,92 @@ jobs:
           # 启动 tunnel，日志输出到文件
           cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
           
-          echo "Waiting for Tunnel..."
+          echo "Waiting for Tunnel (10s)..."
+          sleep 10
           
-          # 循环检测10次，每次1秒
-          for i in {1..10}; do
-            if grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log; then
-              break
-            fi
-            echo "Waiting... ($i/10)"
-            sleep 1
-          done
-          
+          # 直接提取链接
           TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
           
           echo "=========================================================="
-          echo "🦊 Firefox (Playwright Mode) 已准备就绪"
+          echo "🦊 Firefox VNC Ready"
           echo "🔗 VNC 链接: $TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
           echo "=========================================================="
 
-      # 5. 直接运行 Playwright 脚本
+      # 5. 运行 Playwright 脚本 (直接后台运行，无 xterm)
       - name: Run Playwright Script
         run: |
-          echo "🚀 Starting Playwright script directly..."
-          
-          # 必须指定 DISPLAY=:99，否则 headless=False 会报错
-          # python3 -u 保证日志实时输出到 GitHub Action 控制台
-          su appuser -c "export DISPLAY=:99 && python3 -u /home/appuser/get_ipa.py"
+          # 预创建日志文件，允许任何人写入
+          touch /home/appuser/bot.log
+          chmod 666 /home/appuser/bot.log
 
-      # 6. 监控/检查下载结果
-      # 如果你的脚本是同步等待下载完成才退出的，这一步主要起到确认作用
-      - name: Verify Download
+          # 创建启动包装脚本
+          cat <<EOF > /home/appuser/run_bot.sh
+          #!/bin/bash
+          # 必须指定 DISPLAY，否则 headless=False 会报错
+          export DISPLAY=:99
+          export HOME=/home/appuser
+          
+          # 核心命令：
+          # 1. python3 -u : 禁用缓存，实时输出
+          # 2. > bot.log  : 写入日志文件
+          # 3. 2>&1       : 错误日志也写入同一个文件
+          # 4. &          : 后台运行，不阻塞 Action (由下一步 Monitor 接管)
+          nohup python3 -u /home/appuser/get_ipa.py > /home/appuser/bot.log 2>&1 &
+          EOF
+          
+          chmod +x /home/appuser/run_bot.sh
+          su appuser -c "/home/appuser/run_bot.sh"
+          
+          echo "🤖 Script started in background. Check next step for logs."
+
+      # 6. 监控下载 + 实时显示脚本日志
+      - name: Monitor Download & Logs
         run: |
           TARGET_DIR="/home/appuser/Downloads"
-          echo "📂 Checking directory: $TARGET_DIR"
-          ls -lh $TARGET_DIR
+          LOG_FILE="/home/appuser/bot.log"
+          START_TIME=$(date +%s)
+          TIMEOUT=1800 # 30分钟超时
           
-          FILE=$(find "$TARGET_DIR" -name "*.ipa" -print -quit)
+          echo "📝 Streaming logs from $LOG_FILE ..."
           
-          if [ -n "$FILE" ]; then
-             SIZE_MB=$(du -m "$FILE" | cut -f1)
-             echo "✅ Success! Found IPA: $FILE ($SIZE_MB MB)"
-          else
-             echo "⚠️ No IPA file found immediately after script finished."
-             # 如果你的脚本点击下载后立马退出了，可能还没下载完。
-             # 如果需要，可以在这里加一个简单的等待循环，或者在 python 脚本里加等待逻辑。
-          fi
+          # 【后台】启动 tail 实时打印 Python 脚本的输出到 Action 控制台
+          tail -f "$LOG_FILE" &
+          TAIL_PID=$!
+          
+          while true; do
+            NOW=$(date +%s)
+            ELAPSED=$((NOW - START_TIME))
+            
+            # 超时检查
+            if [ "$ELAPSED" -ge "$TIMEOUT" ]; then
+               echo "❌ Timeout reached!"
+               kill $TAIL_PID || true
+               exit 1
+            fi
+            
+            # 查找目标文件
+            FILE=$(find "$TARGET_DIR" -name "*.ipa" -print -quit)
+            
+            if [ -n "$FILE" ]; then
+               # 排除下载临时文件
+               if [ -f "${FILE}.part" ] || [ -f "${FILE}.partjs" ]; then
+                  : # 还在下载中，继续循环
+               else
+                  SIZE_MB=$(du -m "$FILE" | cut -f1)
+                  # 简单校验大小 > 5MB
+                  if [ "$SIZE_MB" -gt 5 ]; then
+                     echo "✅ Download finished: $FILE ($SIZE_MB MB)"
+                     break
+                  fi
+               fi
+            fi
+            
+            # 每 3 秒检查一次
+            sleep 3
+          done
+          
+          # 停止日志打印
+          kill $TAIL_PID || true
 
       # 7. 上传产物
       - name: Upload IPA
