--- a/.github/workflows/firefox.yml
+++ b/.github/workflows/firefox.yml
@@ -14,54 +14,59 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 1. 安装基础环境 (Root 权限)
+      # 1. 安装基础环境
       - name: Install System & Dependencies
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
           apt-get update
-          # 安装系统工具 + Python + Pip
-          # 虽然不用xterm跑脚本了，但保留xterm方便你进VNC调试时手动开终端
-          apt-get install -y software-properties-common wget curl git net-tools sudo debconf-utils vim unzip python3-pip xterm
+          # 安装常用工具 + Python + Pip + 进程管理工具(psmisc)
+          apt-get install -y software-properties-common wget curl git net-tools sudo debconf-utils vim unzip python3-pip xterm psmisc
           
-          # 安装 noVNC 和 VNC Server
+          # 安装 noVNC
           git clone https://github.com/novnc/noVNC.git /opt/noVNC
           git clone https://github.com/novnc/websockify /opt/noVNC/utils/websockify
           ln -s /opt/noVNC/vnc.html /opt/noVNC/index.html
           chmod -R 777 /opt/noVNC
           
+          # 安装 X11 环境
           apt-get install -y xvfb fluxbox x11vnc pulseaudio dbus-x11
           
-          echo ">>> Installing Playwright Python Lib..."
+          echo ">>> Installing Playwright..."
           pip3 install playwright
           
-          echo ">>> Installing System Dependencies for Browsers..."
-          # 安装所有浏览器所需的系统依赖 (Root 运行)
+          echo ">>> Installing System Dependencies..."
           playwright install-deps
 
-      # 2. 配置用户 & 安装浏览器内核
-      - name: Setup User & Install Playwright Browsers
+      # 2. 配置用户 & 安装 Firefox
+      - name: Setup User & Install Firefox
         run: |
           useradd -m -s /bin/bash appuser
-          
-          # 建立下载文件夹
           su appuser -c "mkdir -p /home/appuser/Downloads"
           
-          # 【核心】以 appuser 身份安装 firefox
+          # 以 appuser 身份安装 Firefox 内核
           echo ">>> Installing Firefox for AppUser..."
-          su appuser -c "playwright install"
+          su appuser -c "playwright install firefox"
           
-          # 移动脚本并赋予权限
+          # 移动并处理 Python 脚本
           if [ -f "get_ipa.py" ]; then
             cp get_ipa.py /home/appuser/get_ipa.py
+            # 【临时补丁】
+            # 因为您的脚本点击下载后会立刻关闭浏览器，导致下载失败。
+            # 这里我用 sed 命令在脚本最后强行插入一段 sleep 60，
+            # 确保浏览器在下载开始后至少存活 60 秒，给下载留出时间。
+            # 如果不需要，您可以注释掉下面这行 sed。
+            sed -i '/browser.close()/i \        import time; print("等待下载缓冲..."); time.sleep(60)' /home/appuser/get_ipa.py
+            
             chown appuser:appuser /home/appuser/get_ipa.py
             chmod +x /home/appuser/get_ipa.py
+            echo "✅ Script prepared (with 60s wait patch injected)"
           else
-            echo "❌ Error: get_ipa.py not found in checkout!"
+            echo "❌ Error: get_ipa.py not found!"
             exit 1
           fi
 
-      # 3. 启动桌面环境
+      # 3. 启动桌面 (Xvfb + Fluxbox + VNC)
       - name: Start Desktop Environment
         run: |
           service dbus start || true
@@ -71,37 +76,28 @@ jobs:
           export DISPLAY=:99
           export HOME=/home/appuser
           
-          # 启动虚拟显卡
           Xvfb :99 -screen 0 1280x800x24 &
           sleep 2
-          
-          # 启动窗口管理器
           fluxbox &
-          
-          # 启动 VNC Server (密码 secret)
           x11vnc -display :99 -forever -passwd secret -bg -noxdamage
-          
-          # 启动 noVNC 网页代理
           /opt/noVNC/utils/novnc_proxy --vnc localhost:5900 --listen 6080 &
           EOF
           
           chmod +x /home/appuser/run_desktop.sh
           su appuser -c "/home/appuser/run_desktop.sh"
-          echo "✅ Desktop Started (Xvfb + Fluxbox + VNC)"
+          echo "✅ Desktop Started"
 
-      # 4. 启动 Network Tunnel (原始简单逻辑)
+      # 4. 启动 Tunnel
       - name: Start Network Tunnel
         run: |
           curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
           dpkg -i cloudflared.deb
           
-          # 启动 tunnel，日志输出到文件
           cloudflared tunnel --url http://localhost:6080 > tunnel.log 2>&1 &
           
           echo "Waiting for Tunnel (10s)..."
           sleep 10
           
-          # 直接提取链接
           TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
           
           echo "=========================================================="
@@ -109,44 +105,68 @@ jobs:
           echo "🔗 VNC 链接: $TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
           echo "=========================================================="
 
-      # 5. 运行 Playwright 脚本 (直接后台运行，无 xterm)
+      # 5. 【新增步骤】单独启动 Firefox 验证环境
+      - name: Verify Firefox Standalone
+        run: |
+          echo "🧪 Testing Firefox startup before running script..."
+          
+          # 创建一个简单的验证脚本，只打开 Firefox 并加载 Mozilla 官网
+          cat <<EOF > /home/appuser/test_firefox.sh
+          #!/bin/bash
+          export DISPLAY=:99
+          export HOME=/home/appuser
+          # 在后台启动 Firefox
+          nohup firefox "https://www.mozilla.org" > firefox_test.log 2>&1 &
+          EOF
+          
+          chmod +x /home/appuser/test_firefox.sh
+          su appuser -c "/home/appuser/test_firefox.sh"
+          
+          echo "⏳ Waiting 10 seconds to ensure Firefox GUI renders..."
+          sleep 10
+          
+          # 检查进程是否存在
+          if pgrep -u appuser firefox > /dev/null; then
+             echo "✅ Firefox process is running correctly!"
+             echo "Closing test instance..."
+             pkill -u appuser firefox
+             sleep 2
+          else
+             echo "❌ Firefox failed to start! Check logs:"
+             cat /home/appuser/firefox_test.log
+             exit 1
+          fi
+
+      # 6. 运行 Playwright 脚本
       - name: Run Playwright Script
         run: |
-          # 预创建日志文件，允许任何人写入
           touch /home/appuser/bot.log
           chmod 666 /home/appuser/bot.log
 
-          # 创建启动包装脚本
           cat <<EOF > /home/appuser/run_bot.sh
           #!/bin/bash
-          # 必须指定 DISPLAY，否则 headless=False 会报错
           export DISPLAY=:99
           export HOME=/home/appuser
-          
-          # 核心命令：
-          # 1. python3 -u : 禁用缓存，实时输出
-          # 2. > bot.log  : 写入日志文件
-          # 3. 2>&1       : 错误日志也写入同一个文件
-          # 4. &          : 后台运行，不阻塞 Action (由下一步 Monitor 接管)
+          # 禁用 buffering (-u) 并将日志重定向到文件
           nohup python3 -u /home/appuser/get_ipa.py > /home/appuser/bot.log 2>&1 &
           EOF
           
           chmod +x /home/appuser/run_bot.sh
           su appuser -c "/home/appuser/run_bot.sh"
           
-          echo "🤖 Script started in background. Check next step for logs."
+          echo "🤖 Script started in background."
 
-      # 6. 监控下载 + 实时显示脚本日志
+      # 7. 监控下载 + 实时日志
       - name: Monitor Download & Logs
         run: |
           TARGET_DIR="/home/appuser/Downloads"
           LOG_FILE="/home/appuser/bot.log"
           START_TIME=$(date +%s)
-          TIMEOUT=1800 # 30分钟超时
+          TIMEOUT=1800 
           
           echo "📝 Streaming logs from $LOG_FILE ..."
           
-          # 【后台】启动 tail 实时打印 Python 脚本的输出到 Action 控制台
+          # 实时打印日志
           tail -f "$LOG_FILE" &
           TAIL_PID=$!
           
@@ -154,23 +174,21 @@ jobs:
             NOW=$(date +%s)
             ELAPSED=$((NOW - START_TIME))
             
-            # 超时检查
             if [ "$ELAPSED" -ge "$TIMEOUT" ]; then
                echo "❌ Timeout reached!"
                kill $TAIL_PID || true
                exit 1
             fi
             
-            # 查找目标文件
+            # 查找 ipa 文件
             FILE=$(find "$TARGET_DIR" -name "*.ipa" -print -quit)
             
             if [ -n "$FILE" ]; then
-               # 排除下载临时文件
+               # 排除临时文件
                if [ -f "${FILE}.part" ] || [ -f "${FILE}.partjs" ]; then
-                  : # 还在下载中，继续循环
+                  :
                else
                   SIZE_MB=$(du -m "$FILE" | cut -f1)
-                  # 简单校验大小 > 5MB
                   if [ "$SIZE_MB" -gt 5 ]; then
                      echo "✅ Download finished: $FILE ($SIZE_MB MB)"
                      break
@@ -178,14 +196,12 @@ jobs:
                fi
             fi
             
-            # 每 3 秒检查一次
             sleep 3
           done
           
-          # 停止日志打印
           kill $TAIL_PID || true
 
-      # 7. 上传产物
+      # 8. 上传
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
