--- a/.github/workflows/firefox.yml
+++ b/.github/workflows/firefox.yml
@@ -1,4 +1,4 @@
-name: Firefox Allowed-Ads VNC (XFCE4 Desktop)
+name: Firefox Allowed-Ads VNC (XFCE4 + Anti-Detect)
 
 on: 
   workflow_dispatch:
@@ -14,49 +14,76 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 1. 安装基础环境 (XFCE4 + Firefox + Playwright)
+      # 1. 安装基础环境 (XFCE4)
       - name: Install System & Desktop
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
           apt-get update
-          # 安装基础工具
           apt-get install -y software-properties-common wget curl git net-tools sudo vim unzip python3-pip psmisc
-          
-          # 安装 XFCE4 桌面环境 (比 Fluxbox 友好得多) 和 Xterm
           apt-get install -y xfce4 xfce4-goodies xfce4-terminal
-          
-          # 安装 VNC 和 XServer
           apt-get install -y xvfb x11vnc dbus-x11 pulseaudio
           
-          # 安装 noVNC
+          # noVNC
           git clone https://github.com/novnc/noVNC.git /opt/noVNC
           git clone https://github.com/novnc/websockify /opt/noVNC/utils/websockify
           ln -s /opt/noVNC/vnc.html /opt/noVNC/index.html
           chmod -R 777 /opt/noVNC
           
-          # Playwright 依赖
-          echo ">>> Installing Playwright..."
+          # Playwright
           pip3 install playwright
           playwright install-deps
 
-      # 2. 配置用户 & 写入 Python 脚本
-      - name: Setup User & Script
+      # 2. 配置用户、手动Profile & Python脚本
+      - name: Setup User, Profile & Script
         run: |
           useradd -m -s /bin/bash appuser
           su appuser -c "mkdir -p /home/appuser/Downloads"
           
-          # 安装 Firefox 内核 (用户级)
+          # 安装 Firefox
           echo ">>> Installing Firefox..."
           su appuser -c "playwright install firefox"
+
+          # -------------------------------------------------------------
+          # 【步骤 A】为手动 Debug 准备物理 Profile (当你手动点 Firefox 图标时生效)
+          # -------------------------------------------------------------
+          su appuser -c "mkdir -p /home/appuser/.mozilla/firefox/stealth.default"
           
-          # 写入修改后的 Python 脚本
-          # 使用 'EOF' (带引号) 防止 Shell 解析 $ 符号
+          su appuser -c "cat <<EOF > /home/appuser/.mozilla/firefox/profiles.ini
+          [Profile0]
+          Name=default
+          IsRelative=1
+          Path=stealth.default
+          Default=1
+          [General]
+          StartWithLastProfile=1
+          Version=2
+          EOF"
+          
+          # 写入你的 user.js 配置到默认 Profile
+          su appuser -c "cat <<EOF > /home/appuser/.mozilla/firefox/stealth.default/user.js
+          user_pref(\"dom.webdriver.enabled\", false);
+          user_pref(\"use_automation_extension\", false);
+          user_pref(\"general.useragent.override\", \"Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:120.0) Gecko/20100101 Firefox/120.0\");
+          user_pref(\"privacy.trackingprotection.enabled\", false);
+          user_pref(\"privacy.trackingprotection.pbmode.enabled\", false);
+          user_pref(\"privacy.trackingprotection.socialtracking.enabled\", false);
+          user_pref(\"privacy.trackingprotection.cryptomining.enabled\", false);
+          user_pref(\"privacy.trackingprotection.fingerprinting.enabled\", false);
+          user_pref(\"network.cookie.cookieBehavior\", 0);
+          user_pref(\"network.cookie.thirdparty.sessionOnly\", false);
+          user_pref(\"dom.popup_allowed_events\", \"change click dblclick mouseup notificationclick reset submit touchend\"); 
+          user_pref(\"dom.disable_open_during_load\", false);
+          user_pref(\"media.peerconnection.enabled\", false);
+          EOF"
+
+          # -------------------------------------------------------------
+          # 【步骤 B】集成到 Python 脚本 (当脚本运行时生效)
+          # -------------------------------------------------------------
           cat <<'EOF' > /home/appuser/get_ipa.py
           import json
           import time
           import os
-          import sys
           from playwright.sync_api import sync_playwright
 
           def run():
@@ -64,17 +91,52 @@ jobs:
               print(f"[Script] 启动 Playwright...")
               
               with sync_playwright() as p:
-                  # 启动浏览器 (带防崩溃参数)
+                  # 【核心集成】在这里直接注入所有的 user_pref 配置
+                  # 这样即使不依赖外部 user.js 文件，脚本启动的浏览器也是完全“去指纹”且“允许广告”的
                   browser = p.firefox.launch(
                       headless=False,
-                      args=["--no-sandbox", "--disable-gpu", "--disable-dev-shm-usage", "--disable-setuid-sandbox"]
+                      args=[
+                          "--no-sandbox",
+                          "--disable-gpu",
+                          "--disable-dev-shm-usage",
+                          "--disable-setuid-sandbox"
+                      ],
+                      firefox_user_prefs={
+                          # 1. 基础反爬
+                          "dom.webdriver.enabled": False,
+                          "use_automation_extension": False,
+                          
+                          # 2. 隐私与追踪 (全部关闭以允许广告加载)
+                          "privacy.trackingprotection.enabled": False,
+                          "privacy.trackingprotection.pbmode.enabled": False,
+                          "privacy.trackingprotection.socialtracking.enabled": False,
+                          "privacy.trackingprotection.cryptomining.enabled": False,
+                          "privacy.trackingprotection.fingerprinting.enabled": False,
+                          
+                          # 3. Cookie 设置 (0 = 允许所有，包括第三方)
+                          "network.cookie.cookieBehavior": 0,
+                          "network.cookie.thirdparty.sessionOnly": False,
+                          
+                          # 4. 弹窗与交互设置 (允许广告弹窗)
+                          "dom.popup_allowed_events": "change click dblclick mouseup notificationclick reset submit touchend",
+                          "dom.disable_open_during_load": False,
+                          
+                          # 5. WebRTC (False = 关闭，防止漏 IP)
+                          "media.peerconnection.enabled": False,
+                      }
                   )
+
+                  # 上下文设置
                   context = browser.new_context(
-                      user_agent="Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:120.0) Gecko/20100101 Firefox/120.0",
+                      # User Agent 也可以在这里再次强制指定
+                      user_agent="Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:120.0) Gecko/20100101 Firefox/120.0",
                       viewport={"width": 1280, "height": 800},
-                      ignore_https_errors=True
+                      ignore_https_errors=True,
+                      locale="zh-CN",
+                      timezone_id="Asia/Shanghai"
                   )
-                  # 屏蔽 WebDriver
+                  
+                  # 再次确保 webdriver 属性被抹除
                   context.add_init_script("Object.defineProperty(navigator, 'webdriver', {get: () => undefined});")
 
                   page = context.new_page()
@@ -84,17 +146,18 @@ jobs:
                       page.goto(base_url, timeout=90000)
                       page.wait_for_load_state("domcontentloaded")
                   except Exception as e:
-                      print(f"[Script] 警告: 页面加载可能超时 {e}")
+                      print(f"[Script] 警告: 页面加载 {e}")
 
+                  # Cloudflare 检测
                   if "Just a moment" in page.title() or "Cloudflare" in page.title():
                       print("\n" + "!"*30)
                       print("[!] Cloudflare 拦截！请进 VNC 手动验证！")
                       print("!"*30 + "\n")
                       time.sleep(30)
 
-                  print("[Script] 获取下载链接配置...")
-                  # JS 注入获取下载参数
+                  print("[Script] 解析下载逻辑...")
                   try:
+                      # 模拟前端请求获取下载配置
                       js_code = """
                           async () => {
                               const formData = new FormData();
@@ -108,7 +171,6 @@ jobs:
                       dl_list = json.loads(data_json.get("data", "[]"))
                       
                       target_path = ""
-                      # 简单查找逻辑
                       for item in dl_list:
                           if isinstance(item, str) and len(item) == 21:
                               target_path = item
@@ -119,37 +181,33 @@ jobs:
                            target_path = dl_list[idx-3]
 
                       if not target_path:
-                          print("[Script] 未找到自动下载路径，请手动下载。")
+                          print("[Script] 未找到路径，请手动操作。")
                       else:
                           dl_url = f"{base_url}/dl/{target_path}"
-                          print(f"[Script] 跳转下载页: {dl_url}")
+                          print(f"[Script] 下载页: {dl_url}")
                           dl_page = context.new_page()
                           dl_page.goto(dl_url, referer=base_url)
                           
-                          # 点击步骤
                           print("[Script] 点击 'Get download link'...")
                           dl_page.locator("button.btn-download").filter(has_text="Get download link").click()
                           time.sleep(3)
                           
-                          print("[Script] 点击 'Download' 并等待文件...")
-                          # 处理下载事件
+                          print("[Script] 点击 'Download'...")
                           with dl_page.expect_download(timeout=60000) as download_info:
                               dl_page.locator("button.btn-download").filter(has_text="Download").click()
                           
                           download = download_info.value
                           print(f"[Script] 下载开始: {download.suggested_filename}")
-                          
-                          # 保存文件
                           final_path = os.path.join("/home/appuser/Downloads", download.suggested_filename)
                           download.save_as(final_path)
-                          print(f"[Script] ✅ 文件保存成功: {final_path}")
+                          print(f"[Script] ✅ 保存成功: {final_path}")
 
                   except Exception as e:
-                      print(f"[Script] 错误: {e}")
+                      print(f"[Script] 流程错误: {e}")
                       import traceback
                       traceback.print_exc()
 
-                  print("[Script] 保持浏览器开启...")
+                  print("[Script] 浏览器保持开启，等待 Action 结束...")
                   while True:
                       time.sleep(10)
 
@@ -160,7 +218,7 @@ jobs:
           chown appuser:appuser /home/appuser/get_ipa.py
           chmod +x /home/appuser/get_ipa.py
 
-      # 3. 启动 XFCE4 桌面环境
+      # 3. 启动 XFCE4 桌面
       - name: Start XFCE Desktop
         run: |
           service dbus start || true
@@ -170,24 +228,16 @@ jobs:
           export DISPLAY=:99
           export HOME=/home/appuser
           
-          # 启动 XServer
           Xvfb :99 -screen 0 1280x800x24 &
           sleep 2
-          
-          # 启动 XFCE4 (更友好的桌面)
-          # 使用 dbus-launch 确保 session 正常
           dbus-launch --exit-with-session xfce4-session &
-          
-          # 启动 VNC
           x11vnc -display :99 -forever -passwd secret -bg -noxdamage
-          
-          # 启动 noVNC
           /opt/noVNC/utils/novnc_proxy --vnc localhost:5900 --listen 6080 &
           EOF
           
           chmod +x /home/appuser/run_desktop.sh
           su appuser -c "/home/appuser/run_desktop.sh"
-          echo "✅ XFCE4 Desktop Started"
+          echo "✅ Desktop Started"
 
       # 4. 启动 Tunnel
       - name: Start Network Tunnel
@@ -203,10 +253,8 @@ jobs:
           TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.trycloudflare\.com" tunnel.log | head -1)
           
           echo "=========================================================="
-          echo "🖥️  XFCE4 桌面环境已就绪"
           echo "🔗 VNC 链接: $TUNNEL_URL/vnc.html?autoconnect=true&password=secret"
-          echo "💡 进入后，你会看到类似 Windows 的任务栏和开始菜单。"
-          echo "💡 如果需要手动调试，点击桌面底部的黑色终端图标即可。"
+          echo "💡 已配置允许广告和追踪，修复 AdBlock 检测问题。"
           echo "=========================================================="
 
       # 5. 运行 Python 脚本
@@ -219,7 +267,6 @@ jobs:
           #!/bin/bash
           export DISPLAY=:99
           export HOME=/home/appuser
-          # 强制软件渲染
           export LIBGL_ALWAYS_SOFTWARE=1
           
           nohup python3 -u /home/appuser/get_ipa.py > /home/appuser/bot.log 2>&1 &
